--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <h1>Quick's Pokedex</h1>
+        <h1>Kanto Pokedex</h1>
         <ul id="pokedex"></ul>
     </div>
     <script src="script.js"></script>
